edit of pdf finding script

--- a/scripts/find_pdfs.ipynb
+++ b/scripts/find_pdfs.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bibtex_file = open(\"/home/jason/Dokumente/work/webis/ir-anthology/dummy-ir-antho/dummy.bib\", \"r\")\n",
+    "bibtex_file = open(\"/home/jason/Dokumente/work/webis/ir-anthology/ir-anthology-data/ir-anthology.bib\", \"r\")\n",
     "bib_database = bibtexparser.load(bibtex_file)\n",
     "\n",
     "acronym_file=open(\"/home/jason/Dokumente/work/webis/ir-anthology/ir-anthology-data/criteria.bib\",\"r\")\n",
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "f3a8832e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ceph_path=\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/wlgc/papers-by-doi/\"\n",
-    "wlgc_new=\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/new_structure/\"\n",
-    "new_bibs_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/new_bibs_dirs.json\",\"w\")\n",
-    "found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/found.json\",\"w\")\n",
-    "not_found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/not_found.json\",\"w\")\n",
-    "no_doi_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc_test3/no_doi.json\",\"w\")\n",
+    "ceph_path=\"/home/jason/Dokumente/work/webis/ir-anthology/wlgc/papers-by-doi/\"\n",
+    "wlgc_new=\"/home/jason/Dokumente/work/webis/ir-anthology/new_structure/\"\n",
+    "new_bibs_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/new_structure_jsons/new_bibs_dirs.json\",\"w\")\n",
+    "found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/new_structure_jsons/found.json\",\"w\")\n",
+    "not_found_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/new_structure_jsons/not_found.json\",\"w\")\n",
+    "no_doi_json=open(\"/home/jason/Dokumente/work/webis/ir-anthology/new_structure_jsons/no_doi.json\",\"w\")\n",
     "new_bibs_dirs={}\n",
     "found_pdf={}\n",
     "not_found={}\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "eaf46a61",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 621/621 [00:18<00:00, 34.09it/s]\n"
+      "100%|█████████████████████████████████████| 62077/62077 [31:18<00:00, 33.05it/s]\n"
      ]
     }
    ],
@@ -84,65 +84,80 @@
     "            continue\n",
     "    \n",
     "        else:\n",
-    "            for pdf in os.listdir(ceph_path + doi_prefix):\n",
-    "                pdf_url = unquote(pdf)\n",
+    "            try:\n",
+    "                for pdf in os.listdir(ceph_path + doi_prefix):\n",
+    "                    pdf_url = unquote(pdf)\n",
     "\n",
-    "                if pdf_url[:-4] == doi_suffix:\n",
+    "                    if pdf_url[:-4] == doi_suffix:\n",
     "\n",
-    "                    #move to new folder /conference/year/bib_name\n",
-    "                    source_id=bib_entry[\"sourceid\"]\n",
-    "                    conference=source_id.split(\"/\")[1]\n",
-    "                    \n",
-    "                    conference_acro=acro_database.entries_dict[\"CRITERIA:DBLP:\"+conference][\"acronym\"]\n",
-    "                    year=bib_entry[\"year\"]\n",
-    "                    \n",
-    "                    try:\n",
-    "                        os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
-    "                    except:\n",
-    "                        os.makedirs(wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\")\n",
-    "                        os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
-    "                    \n",
-    "                    new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
-    "                    found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
-    "                    \n",
-    "                    found = 1\n",
+    "                        #move to new folder /conference/year/bib_name\n",
+    "                        source_id=bib_entry[\"sourceid\"]\n",
+    "                        conference=source_id.split(\"/\")[1]\n",
     "\n",
-    "            if found == 0:\n",
-    "                # pdf not found\n",
-    "                # looking in subdirs for pdf\n",
+    "                        #print(source_id)\n",
+    "                        #print(source_id.split(\"/\"))\n",
+    "                        if conference==\"www\" or conference==\"sigir\":\n",
+    "                            if source_id.split(\"/\")[0] == \"DBLP:journals\":\n",
+    "                                conference_acro=acro_database.entries_dict[\"CRITERIA:DBLP:\"+conference+\"journals\"][\"acronym\"]\n",
     "\n",
-    "                alldirs = [dir[0] for dir in os.walk(ceph_path)]\n",
+    "                            if source_id.split(\"/\")[0] == \"DBLP:conf\":\n",
+    "                                conference_acro=acro_database.entries_dict[\"CRITERIA:DBLP:\"+conference+\"conf\"][\"acronym\"]\n",
     "\n",
-    "                for direct in alldirs:\n",
-    "                    for pdf in os.listdir(direct):\n",
-    "                        if pdf.endswith(\".pdf\"):\n",
-    "                            \n",
-    "                            pdf_url = unquote(pdf)\n",
-    "                            \n",
-    "                            if pdf_url[:-4] == doi_suffix: \n",
-    "                                # pdf exists\n",
-    "                                \n",
-    "                                os.rename(direct + pdf, bib_name) \n",
-    "                                \n",
-    "                                try:\n",
-    "                                    os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
-    "                                except:\n",
-    "                                    os.makedirs(wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\")\n",
-    "                                    os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
-    "                                \n",
-    "                                found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
-    "                                new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
-    "                                \n",
-    "                                found = 1\n",
+    "                        else:\n",
+    "                            conference_acro=acro_database.entries_dict[\"CRITERIA:DBLP:\"+conference][\"acronym\"]\n",
     "\n",
-    "                        if found == 0:\n",
-    "                            not_found[bib_name]=\"not found\"\n",
-    "    "
+    "                        year=bib_entry[\"year\"]\n",
+    "\n",
+    "                        try:\n",
+    "                            os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
+    "                        except:\n",
+    "                            os.makedirs(wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\")\n",
+    "                            os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
+    "\n",
+    "                        new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
+    "                        found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
+    "\n",
+    "                        found = 1\n",
+    "\n",
+    "                if found == 0:\n",
+    "                    # pdf not found\n",
+    "                    # looking in subdirs for pdf\n",
+    "\n",
+    "                    alldirs = [dir[0] for dir in os.walk(ceph_path)]\n",
+    "\n",
+    "                    for direct in alldirs:\n",
+    "                        for pdf in os.listdir(direct):\n",
+    "                            if pdf.endswith(\".pdf\"):\n",
+    "\n",
+    "                                pdf_url = unquote(pdf)\n",
+    "\n",
+    "                                if pdf_url[:-4] == doi_suffix: \n",
+    "                                    # pdf exists\n",
+    "\n",
+    "                                    os.rename(direct + pdf, bib_name) \n",
+    "\n",
+    "                                    try:\n",
+    "                                        os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
+    "                                    except:\n",
+    "                                        os.makedirs(wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\")\n",
+    "                                        os.rename(ceph_path+doi_prefix+\"/\"+pdf,wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"+bib_name+\".pdf\")\n",
+    "\n",
+    "                                    found_pdf[bib_name]=[doi_url,ceph_path + doi_prefix + \"/\" + pdf]\n",
+    "                                    new_bibs_dirs[bib_name]=wlgc_new+str(conference_acro)+\"/\"+str(year)+\"/\"\n",
+    "\n",
+    "                                    found = 1\n",
+    "\n",
+    "                            if found == 0:\n",
+    "                                not_found[bib_name]=\"not found\"\n",
+    "            \n",
+    "            except:\n",
+    "                not_found[bib_name]=\"not found\"\n",
+    "                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "a7518c58",
    "metadata": {},
    "outputs": [
@@ -150,10 +165,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found  433\n",
-      "not found  185\n",
-      "no doi  3\n",
-      "new bib dirs  433\n"
+      "found  27002\n",
+      "not found  22174\n",
+      "no doi  12901\n",
+      "new bib dirs  27002\n"
      ]
     }
    ],
